# Newsmaker

./: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_rss.py
admin/: app.py
admin/routes/: sources.py
admin/templates/: source_create.html  sources.html
alembic/: env.py  script.py.mako
alembic/versions/: 63a22ab9b244_initial_schema.py
app/: main.py
application/handlers/: publish_handler.py
bootstrap/: application.py  container.py  lifecycle.py  orchestration.py  parsers.py  seeds.py  shutdown.py  startup.py  wiring.py
bot/: callbacks.py
bot/handlers/: admin_panel.py  start.py
bot/keyboards/: admin.py  common.py
bot/middlewares/: auth.py  trace.py
bot/routers/: admin.py  base.py  registration.py  superuser.py
bot/states/: admin.py
contracts/events/: delivery.py  envelope.py  retry.py
core/config/: models.py  runtime.py  settings.py
core/logging/: context.py  factory.py  logger.py
core/types/: aliases.py  protocols.py
database/migrations/: env.py
database/models/: base.py  chats.py  enums.py  outbox.py  publications.py  (+4 more)
deployment/: .dockerignore  Dockerfile  docker-compose.yml  railway.toml
publishers/: access_filter.py  delivery_result.py  publisher.py  rate_limiter.py  telegram_gateway.py
routing/: audience_resolver.py  router.py  targets.py
runtime/: event_dispatcher.py  parser_runner.py  run_scheduler.py  runtime_manager.py  scheduler.py
subscriptions/: entitlements.py  models.py  service.py
workers/: base.py  dlq_worker.py  enrichment_worker.py  maintenance_worker.py  persistence_worker.py  processing_worker.py  retry_worker.py  rss_runtime.py  run.py  stream_consumer.py  telegram_delivery_worker.py
(+75 files in other folders)
