[project]
name = "news-bot"
version = "0.1.0"
description = "Event-driven Telegram SaaS bot"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
