[project]
name = "news-bot"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "aiogram>=3.4.0",
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "aiohttp>=3.9.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
